MDEV-35246 Vector search skips a row in the table

stronger condition in select_neighbors() to reject exact matches too